hphp/test/zend/good/Zend/tests/bug29674.php.expectf
===BASE===
string(4) "Base"

Notice: Undefined property: BaseClass::$private_child in %s/bug29674.php on line 10
NULL
===CHILD===
string(4) "Base"

Fatal error: Cannot access private property ChildClass::$private_child in %s/bug29674.php on line 10
